@@ -16,6 +16,7 @@
   <property name="skip_pager_hint">False</property>
   <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
   <property name="gravity">GDK_GRAVITY_NORTH_WEST</property>
+  <property name="focus_on_map">True</property>
   <property name="has_separator">True</property>
 
   <child internal-child="vbox">
@@ -147,6 +148,10 @@
 		  <property name="yalign">0.5</property>
 		  <property name="xpad">0</property>
 		  <property name="ypad">0</property>
+		  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+		  <property name="width_chars">-1</property>
+		  <property name="single_line_mode">False</property>
+		  <property name="angle">0</property>
 		</widget>
 		<packing>
 		  <property name="type">label_item</property>
@@ -233,80 +238,19 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkOptionMenu" id="optionmenu2">
+		    <widget class="GtkComboBox" id="combobox2">
 		      <property name="visible">True</property>
-		      <property name="can_focus">True</property>
-		      <property name="history">0</property>
-		      <signal name="changed" handler="clock_optionmenu2_changed" last_modification_time="Mon, 20 Jun 2005 08:26:47 GMT"/>
-
-		      <child>
-			<widget class="GtkMenu" id="menu2">
-
-			  <child>
-			    <widget class="GtkMenuItem" id="mmddyy1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">MM/DD/YY</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="ddmmyy2">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">DD/MM/YY</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="mmddyy3">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">MM.DD.YY</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="ddmmyy4">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">DD.MM.YY</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="yymmdd5">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">YY.MM.DD</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="mmddyy6">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">MM-DD-YY</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="ddmmyy7">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">DD-MM-YY</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="yymmdd8">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">YY-MM-DD</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-			</widget>
-		      </child>
+		      <property name="items" translatable="yes">MM/DD/YY
+DD/MM/YY
+MM.DD.YY
+DD.MM.YY
+YY.MM.DD
+MM-DD-YY
+DD-MM-YY
+YY-MM-DD</property>
+		      <property name="add_tearoffs">False</property>
+		      <property name="focus_on_click">True</property>
+		      <signal name="changed" handler="on_clock_combobox2_changed" last_modification_time="Fri, 08 May 2009 16:09:02 GMT"/>
 		    </widget>
 		    <packing>
 		      <property name="padding">0</property>
@@ -330,6 +274,10 @@
 		  <property name="yalign">0.5</property>
 		  <property name="xpad">0</property>
 		  <property name="ypad">0</property>
+		  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+		  <property name="width_chars">-1</property>
+		  <property name="single_line_mode">False</property>
+		  <property name="angle">0</property>
 		</widget>
 		<packing>
 		  <property name="type">label_item</property>
@@ -479,120 +427,31 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkOptionMenu" id="optionmenu1">
+		    <widget class="GtkComboBox" id="combobox1">
 		      <property name="visible">True</property>
-		      <property name="can_focus">True</property>
-		      <property name="history">0</property>
-		      <signal name="changed" handler="clock_optionmenu1_changed" last_modification_time="Mon, 20 Jun 2005 08:26:26 GMT"/>
-
-		      <child>
-			<widget class="GtkMenu" id="menu1">
-
-			  <child>
-			    <widget class="GtkMenuItem" id="jan1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Jan</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="feb1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Feb</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="mar1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Mar</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="apr1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Apr</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="may1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">May</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="jun1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Jun</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="jul1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Jul</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="aug1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Aug</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="sep1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Sep</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="oct1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Oct</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="nov1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Nov</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-
-			  <child>
-			    <widget class="GtkMenuItem" id="dec1">
-			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">Dec</property>
-			      <property name="use_underline">True</property>
-			    </widget>
-			  </child>
-			</widget>
-		      </child>
+		      <property name="items" translatable="yes">Jan
+Feb
+Mar
+Apr
+May
+Jun
+Jul
+Aug
+Sep
+Oct
+Nov
+Dec</property>
+		      <property name="add_tearoffs">False</property>
+		      <property name="focus_on_click">True</property>
+		      <signal name="changed" handler="on_clock_combobox1_changed" last_modification_time="Fri, 08 May 2009 15:54:50 GMT"/>
 		    </widget>
 		    <packing>
 		      <property name="left_attach">1</property>
 		      <property name="right_attach">2</property>
 		      <property name="top_attach">0</property>
 		      <property name="bottom_attach">1</property>
-		      <property name="x_options"></property>
-		      <property name="y_options"></property>
+		      <property name="x_options">fill</property>
+		      <property name="y_options">fill</property>
 		    </packing>
 		  </child>
 		</widget>
@@ -611,6 +470,10 @@
 		  <property name="yalign">0.5</property>
 		  <property name="xpad">0</property>
 		  <property name="ypad">0</property>
+		  <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+		  <property name="width_chars">-1</property>
+		  <property name="single_line_mode">False</property>
+		  <property name="angle">0</property>
 		</widget>
 		<packing>
 		  <property name="type">label_item</property>
